fixing swagger and migrate generate voucher seat to a service file
